--- a/bank_app/templates/bank_app/accounts.html
+++ b/bank_app/templates/bank_app/accounts.html
@@ -90,6 +90,16 @@
             <h3>Add credit card for {{ customer.user.username }}</h3>
             <form method="post">
                 {% csrf_token %}
+                <input type="hidden" name="pk" value="{{ a.pk }}" />
+                <div class="form_item_wrapper">
+                    <label>For account</label>
+                    <select name="card_account">
+                        <option disabled selected value> -- select an option -- </option>
+                        {% for a in accounts %}									
+                            <option value="{{ a.pk }}">{{ a.accountNumber }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
                 <div class="form_item_wrapper">
                     <label>Initial Balance</label>
                     <input type="number" name="initial_card_balance" placeholder="Set Initial Credit Card Balance" />
@@ -97,32 +107,6 @@
                 <input type="hidden" name="pk" value="{{ customer.pk }}" />
                 <button formaction="{% url 'bank_app:generate_card' %}" class="btn" id="generate_card_btn">Generate card</button>
             </form>
-            <!-- {% if generated == 1 %}
-                <form id="generated_card" method="post">
-                    {% csrf_token %}
-                    <div class="form_item_wrapper">
-                        <label>Card number</label>
-                        <input type="number" name="card_no" max='16'/>
-                    </div>
-                    <div class="form_item_wrapper">
-                        <label>Card balance</label>
-                        <input type="number" name="card_balance" />
-                    </div>
-                    <div class="form_item_wrapper">
-                        <label>Card holder</label>
-                        <input type="number" name="card_holder" value="{{ customer.user.username }}"/>
-                    </div>
-                    <div class="form_item_wrapper">
-                        <label>Epiry date</label>
-                        <input type="datetime" name="card_expiry" />
-                    </div>
-                    <div class="form_item_wrapper">
-                        <label>CVV</label>
-                        <input type="number" name="card_cvv" max='3'/>
-                    </div>
-                    <button formaction="{% url 'bank_app:confirm_card' %}" class="btn">Confirm</button>
-                </form>
-            {% endif %} -->
         </section>
 
         <section>
@@ -130,10 +114,13 @@
             <table>
                 <tr>
                     <th></th>
+                    <th>Account</th>
                     <th>Card Number</th>
                     <th>Balance</th>
                     <th>Expiry Date</th>
                     <th>Debt</th>
+                    <th>Interest</th>
+                    <th></th>
                     <!-- <th>CVV</th> -->
                 </tr>
 
@@ -147,6 +134,7 @@
                             <input type="hidden" name="pk" value="{{ c.pk }}" />
                             <input type="hidden" name="pkcust" value="{{ customer.pk }}" />
                             <td>{{ forloop.counter }}</td>
+                            <td>{{ c.account }}</td>
                             <td>{{ c.cardNumber }}</td>
                             <td>{{ c.initialBalance }}</td>
                             <td>{{ c.expiryDate }}</td>
@@ -156,6 +144,10 @@
                                         {{ b.1 }}
                                     {% endif %}
                                 {% endfor %}
+                            </td>
+                            <td>{{ c.interest }}</td>
+                            <td>
+                                <button formaction="{% url 'bank_app:add_interest' %}" class="btn">Add interest</button>
                             </td>
                             <!-- <td>{{ c.cvvNumber }}</td> -->
                             <td>
