--- a/login_app/static/css/style.css
+++ b/login_app/static/css/style.css
@@ -15,6 +15,12 @@ body {
     box-sizing: border-box;
 }
 
+#qrcode {
+    width: 200px;
+    margin: 15px auto 30px auto;
+    display: block;
+}
+
 .btn {
     cursor: pointer;
     padding: .4rem;
