--- a/bank_app/templates/bank_app/card_movements.html
+++ b/bank_app/templates/bank_app/card_movements.html
@@ -36,7 +36,7 @@
 					<tr>
 						<th></th>
 						<th>Date</th>
-						<th>Amount</th>
+						<th>Amount (DKK)</th>
 						<th>To/from</th>
 						<th>Description</th>
 					</tr>
