--- a/bank_app/templates/bank_app/accounts.html
+++ b/bank_app/templates/bank_app/accounts.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="form_item_wrapper">
                     <label>Initial Balance</label>
-                    <input type="number" name="balance" placeholder="Set Initial Balance" />
+                    <input type="number" name="balance" placeholder="Set Initial Balance (DKK)" step=".01"/>
                 </div>
                 <input type="hidden" name="pk" value="{{ customer.pk }}" />
                 <button formaction="{% url 'bank_app:add_account' %}" class="btn">Add account</button>
@@ -55,6 +55,7 @@
                     <th></th>
                     <th>Account Number</th>
                     <th>Balance</th>
+                    <th></th>
                 </tr>
 
                 {% for a in accounts %}
@@ -75,11 +76,54 @@
                                     {% endif %}
                                 {% endfor %}
                             </td>
-                            <td>
-                                <button formaction="{% url 'bank_app:del_account' %}" class="icon_btn del_btn">
-                                    <i class="fa-solid fa-trash"></i>
-                                </button>
-                            </td>
+                            {% if a.isLoan == True %}
+                                {% for l in loans %}
+                                    {% if l.account == a.accountNumber %}
+                                        <input type="hidden" name="lpk" value="{{ l.pk }}" />
+                                        <td><input type="text" name="to_account" value="{{ l.account }}" /></td>
+                                        <input type="hidden" name="loan_amount" value="{{ l.loanAmount }}" />
+                                        <input type="hidden" name="loan_account" value="{{ l.loanAccount }}" />
+                                        {% if l.confirmed == 'true' %}
+                                            {% for b in balances %}
+                                                {% if b.0 == a.pk %}
+                                                    {% if b.1 == 0 %}
+                                                        <td>
+                                                            <div>Completed</div>
+                                                            <button formaction="{% url 'bank_app:del_loan' %}" class="icon_btn del_btn">
+                                                                <i class="fa-solid fa-trash"></i>
+                                                            </button>
+                                                        </td>
+                                                    {% else %}
+                                                        <td>Active</td>
+                                                    {% endif %}
+                                                {% endif %}
+                                            {% endfor %}
+                                        {% elif l.confirmed == 'false' %}
+                                            <td>
+                                                <div>Declined</div>
+                                                <button formaction="{% url 'bank_app:del_loan' %}" class="icon_btn del_btn">
+                                                    <i class="fa-solid fa-trash"></i>
+                                                </button>
+                                            </td>
+                                        {% else %}
+                                            <td>
+                                                <button formaction="{% url 'bank_app:accept_loan' %}" class="simple_btn">
+                                                    Accept
+                                                </button>
+                                                <button formaction="{% url 'bank_app:decline_loan' %}" class="simple_btn">
+                                                    Decline
+                                                </button>
+                                            </td>
+                                        {% endif %}
+                                    {% endif %}
+                                {% endfor %}
+                            {% else %}
+                                <td>
+                                    <button formaction="{% url 'bank_app:del_account' %}" class="icon_btn del_btn">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                </td>
+                            {% endif %}
                     </form>
                 </tr>
                 {% endfor %}
@@ -102,7 +146,7 @@
                 </div>
                 <div class="form_item_wrapper">
                     <label>Initial Balance</label>
-                    <input type="number" name="initial_card_balance" placeholder="Set Initial Credit Card Balance" />
+                    <input type="number" name="initial_card_balance" placeholder="Set Initial Credit Card Balance (DKK)" step=".01"/>
                 </div>
                 <input type="hidden" name="pk" value="{{ customer.pk }}" />
                 <button formaction="{% url 'bank_app:generate_card' %}" class="btn" id="generate_card_btn">Generate card</button>
@@ -138,7 +182,7 @@
                             <td>{{ forloop.counter }}</td>
                             <td>{{ c.account }}</td>
                             <td>{{ c.cardNumber }}</td>
-                            <td>{{ c.initialBalance }}</td>
+                            <td>{{ c.initialBalance }} DKK</td>
                             <td>{{ c.expiryDate }}</td>
                             <td>
                                 {% for b in card_repay_balances %}
@@ -157,66 +201,6 @@
                                     <i class="fa-solid fa-trash"></i>
                                 </button>
                             </td>
-                    </form>
-                </tr>
-                {% endfor %}
-            </table>
-        </section>
-
-        <section id="loans_overview">
-            <h3>Manage loans for {{ customer.user.username }}</h3>
-            <table>
-                <tr>
-                    <th></th>
-                    <th>Bank Account</th>
-                    <th>Loan Amount</th>
-                    <th>Amount to Pay</th>
-                    <th>Accept/Decline</th>
-                </tr>
-
-                {% for l in loans %}
-                <tr {% if forloop.counter|divisibleby:2 %}
-                        class="white_bg"
-                    {% endif %}	>
-               
-                    <form method="post">
-                        {% csrf_token %}
-                            <input type="hidden" name="pk" value="{{ l.pk }}" />
-							<input type="hidden" name="to_account" value="{{ l.account }}" />
-                            <input type="hidden" name="loan_amount" value="{{ l.loanAmount }}" />
-                            <input type="hidden" name="pkcust" value="{{ customer.pk }}" />
-                            <td>{{ forloop.counter }}</td>
-                            <td>{{ l.account }}</td>
-                            <td>{{ l.loanAmount }}</td>
-                            <td>{{ l.remainingAmount }}</td>
-                            {% if l.confirmed == 'true' %}
-                                {% if l.remainingAmount == 0 %}
-                                    <td>Completed</td>
-                                    <td>
-                                        <button formaction="{% url 'bank_app:del_loan' %}" class="icon_btn del_btn">
-                                            <i class="fa-solid fa-trash"></i>
-                                        </button>
-                                    </td>
-                                {% else %}
-                                    <td>Active</td>
-                                {% endif %}
-                            {% elif l.confirmed == 'false'%}
-                                <td>Declined</td>
-                                <td>
-                                    <button formaction="{% url 'bank_app:del_loan' %}" class="icon_btn del_btn">
-                                        <i class="fa-solid fa-trash"></i>
-                                    </button>
-                                </td>
-                            {% else %}
-                                <td>
-                                    <button formaction="{% url 'bank_app:accept_loan' %}" class="simple_btn">
-                                        Accept
-                                    </button>
-                                    <button formaction="{% url 'bank_app:decline_loan' %}" class="simple_btn">
-                                        Decline
-                                    </button>
-                                </td>
-                            {% endif %}
                     </form>
                 </tr>
                 {% endfor %}
